# Mnemoss

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MNEMOSS_FORMULA_AND_ARCHITECTURE.md  MNEMOSS_PROJECT_KNOWLEDGE.md  Makefile  README.md  RELEASE_NOTES_0.0.1.md  TODOS.md  mnemoss.toml.example  pyproject.toml
.github/workflows/: bench-ci.yml  tests.yml
adapters/claude-cowork/: .mcp.json  INSTALL.md  README.md
adapters/claude-cowork/.claude-plugin/: plugin.json
adapters/hermes-agent/: INSTALL.md  README.md  plugin.yaml  pyproject.toml
adapters/hermes-agent/src/mnemoss_hermes/: __init__.py  _stub_memory_provider.py  provider.py
adapters/hermes-agent/tests/: test_provider.py
adapters/openclaw/: INSTALL.md  README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
adapters/openclaw/src/: config.ts  index.ts  manager.ts  openclaw-types.ts
adapters/openclaw/tests/: manager.test.ts
bench/: __init__.py  _metrics.py  ablate_dreaming.py  ablate_dreaming.toml  bench_d_recall_sweep.py  bench_dream_lift.py  bench_embedder_speed.py  bench_false_positive.py  bench_final_5k.py  bench_locomo_agentic.py  bench_memoryagent.py  bench_memoryagent_llm.py  bench_multi_step.py  bench_multi_step_agent_scope.py  bench_rebalance_lift.py  bench_recall.py  bench_repeated_query.py  bench_stale_fact.py  bench_tier_lifecycle.py  bench_tier_oracle.py  calibrate.py  comprehensive_validation.py  final_validation.py  forgetting_curves.py  gist_quality.py  launch_comparison.py  longmemeval.py  plot_gist.py  plot_pareto.py  plot_pressure.py  plots.py  scale_cascade_audit.py  scale_latency.py  scale_sweep.py  sweep_cluster.py  sweep_dispose.py
bench/backends/: __init__.py  base.py  mem0_backend.py  memos_backend.py  mnemoss_backend.py  raw_stack_backend.py  static_file_backend.py
bench/data/: locomo_memories.jsonl  locomo_queries.jsonl  multi_step_pairs.jsonl  non_contradiction_pairs.jsonl  prepare_locomo.py  prepare_longmemeval.py  supersession_pairs.jsonl  supersession_pairs_100.jsonl
bench/fixtures/: pressure_corpus_gen.py  pressure_corpus_seed42.jsonl  topology_corpus.json
bench/published/: README.md
bench/published/results/: multi_step_openai.json  repeated_query_gemma.json  repeated_query_local.json  repeated_query_nomic.json  stale_fact.json  stale_fact_gemma.json  stale_fact_local.json  stale_fact_split_defaults.json  stale_fact_supersede_0_7.json  stale_fact_supersede_gemma.json  stale_fact_supersede_local.json  stale_fact_with_supersede.json  stale_fact_zerogap_openai.json
bench/results/: cluster_sweep.json  comprehensive_pressure.jsonl  comprehensive_topology.jsonl  dispose_sweep.json  final_validation_pressure.jsonl  final_validation_topology.jsonl  gist_quality.jsonl  lme_s_mem0_vs_mnemoss.md  lme_s_pilot_report.md  lme_s_stratified10_mnemoss_facts_v3_gpt4omini_k30.json  lme_s_stratified_mem0.json  lme_s_stratified_mem0_gpt4o.json  lme_s_stratified_mnemoss.json  lme_s_stratified_mnemoss_baseline_gpt4omini_k30.json  lme_s_stratified_mnemoss_dream.json  lme_s_stratified_mnemoss_dream_expand.json  lme_s_stratified_mnemoss_dream_expand_ts.json  lme_s_stratified_mnemoss_facts.json  lme_s_stratified_mnemoss_facts_singletons.json  lme_s_stratified_mnemoss_facts_singletons_v2.json  lme_s_stratified_mnemoss_facts_v2.json  lme_s_stratified_mnemoss_facts_v3.json  lme_s_stratified_mnemoss_facts_v3_gpt4o.json  lme_s_stratified_mnemoss_facts_v3_gpt4omini.json  lme_s_stratified_mnemoss_facts_v3_gpt4omini_k30.json  lme_s_stratified_mnemoss_facts_v3_gpt4omini_k30_dates.json  lme_s_stratified_mnemoss_facts_v3_gpt4omini_k50.json  lme_s_stratified_mnemoss_facts_v4.json  lme_s_stratified_mnemoss_k20.json  pressure_results.jsonl  topology_results.jsonl
bench/tests/: __init__.py  test_gist_quality.py  test_longmemeval.py  test_metrics.py  test_pressure_corpus.py
demo/: __init__.py  llm.py  render_trace.py  scenarios.py  simulate.py  types.py
docs/: LAUNCH.md  ROOT_CAUSE.md  dreaming-decision.md  figures.py
docs/superpowers/plans/: 2026-05-15-adaptive-tier-caps.md
docs/superpowers/specs/: 2026-05-15-adaptive-tier-caps-design.md
examples/: basic.py  production.py  server_and_sdk.py
sdks/typescript/: package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: client.ts  index.ts  parse.ts  types.ts
sdks/typescript/tests/: client.test.ts
src/mnemoss/: __init__.py  client.py
src/mnemoss/cli/: __init__.py  inspect.py
src/mnemoss/core/: __init__.py  config.py  config_file.py  types.py
src/mnemoss/dream/: __init__.py  cluster.py  consolidate.py  cost.py  diary.py  dispose.py  extract.py  generalize.py  refine.py  relations.py  replay.py  runner.py  types.py
src/mnemoss/encoder/: __init__.py  chunking.py  embedder.py  event_encoder.py  event_segmentation.py  extraction.py  retrying.py  salience.py
src/mnemoss/export/: __init__.py  markdown.py
src/mnemoss/formula/: __init__.py  activation.py  base_level.py  idx_priority.py  matching.py  noise.py  query_bias.py  spreading.py
src/mnemoss/index/: __init__.py  adaptive_caps.py  rebalance.py
tests/: test_adaptive_caps.py  test_adaptive_caps_convergence.py  test_adaptive_caps_engine.py  test_adversarial_inputs.py  test_ann_index.py  test_ann_rehydrate.py  test_async_embedding.py  test_bench_backends_mnemoss.py  test_bench_backends_raw_stack.py  test_bench_backends_static_file.py  test_bench_calibrate.py  test_bench_launch_comparison.py  test_bench_locomo_ingest.py  test_bench_plots.py  test_chunking.py  test_cli_inspect.py  test_cli_wrappers.py  test_client.py  test_client_warmup.py  test_config_file.py  test_config_validation.py  test_demo_render_trace.py  test_demo_simulate.py  test_docs_figures.py  test_dream_cluster.py  test_dream_consolidate.py  test_dream_cost.py  test_dream_diary.py  test_dream_dispose.py  test_dream_extract.py  test_dream_failure_recovery.py  test_dream_generalize.py  test_dream_integration.py  test_dream_nightly.py  test_dream_phase_mask.py  test_dream_refine.py  test_dream_relations.py  test_dream_scaffolding.py  test_embedder.py  test_end_to_end_example.py  (+43 more)
(+45 files in other folders)
