[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemoss"
version = "0.1.0"
description = "ACT-R based memory system for AI agents. Recall what matters, when it matters."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Guangyang Qi", email = "yang.qi@opcify.ai" }]
keywords = ["memory", "act-r", "agents", "llm", "cognitive-architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "apsw>=3.46",
    "sqlite-vec>=0.1",
    "sentence-transformers>=2.2",
    "ulid-py>=1.1",
    "python-dateutil>=2.8",
    "pydantic>=2.0",
    "dateparser>=1.2",
    "scikit-learn>=1.3",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
gemini = ["google-genai>=0.8"]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
sdk = ["httpx>=0.27"]
mcp = ["mcp>=1.0"]
observability = ["prometheus-client>=0.19"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.5",
    "httpx>=0.27",
]

[project.scripts]
mnemoss-server = "mnemoss.server.cli:main"
mnemoss-mcp = "mnemoss.mcp.cli:main"
mnemoss-inspect = "mnemoss.cli.inspect:main"

[project.urls]
Homepage = "https://github.com/opcify/mnemoss"
Repository = "https://github.com/opcify/mnemoss"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemoss"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["mnemoss"]

# Optional extras + a handful of untyped third-party libs we import
# lazily. Missing stubs here are expected — either the dep is
# intentionally optional (openai / anthropic / google-genai) or the
# upstream package doesn't ship py.typed yet (sentence_transformers,
# sklearn, sqlite_vec, dateparser, dateutil).
[[tool.mypy.overrides]]
module = [
    "apsw",
    "openai",
    "openai.*",
    "anthropic",
    "anthropic.*",
    "google.genai",
    "google.genai.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "sklearn",
    "sklearn.*",
    "sqlite_vec",
    "dateparser",
    "dateparser.*",
    "dateutil",
    "dateutil.*",
    "tomllib",
    "tomli",
    "prometheus_client",
    "prometheus_client.*",
    "mcp",
    "mcp.*",
]
ignore_missing_imports = true

# The ``store`` package wraps an untyped C extension (apsw). Its
# ``execute().fetchone()`` returns ``Any`` by design, so propagating
# strict ``no-any-return`` checks through every SQL helper would add
# noise without catching real bugs. Scope the relaxation tightly to
# this package — everywhere else stays strict.
[[tool.mypy.overrides]]
module = "mnemoss.store.*"
warn_return_any = false
disallow_any_generics = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that hit real models or external services (downloads ~470MB on first run)",
]
